More fixes for horizontal scroll on mobile. Using hyphens for long section titles.

--- a/app/scss/decorate.scss
+++ b/app/scss/decorate.scss
@@ -171,6 +171,10 @@ header a, header div {
       position: absolute;
       letter-spacing: -0.1ch;
     }
+
+    .header-title {
+      hyphens: manual;
+    }
   }
 
   &:nth-child(4n+1) .header-number {
