--- a/app/scss/responsive.scss
+++ b/app/scss/responsive.scss
@@ -106,7 +106,6 @@ $content-page-v-margin: 70vh;
         letter-spacing: -0.1ch;
         left: -0.1ch;
         max-width: 100vw;
-        overflow-x: hidden;
       }
     }
   }
